Better error messages when retrieving betas